--- a/Birth/index.html
+++ b/Birth/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-  <meta http-equiv="refresh" content="0; url=birthday.html">
+    <meta charset="UTF-8">
+    <title>入口</title>
+    <meta http-equiv="refresh" content="0; url=birthday.html">
 </head>
+<body>
+    <p>正在进入页面……</p>
+</body>
 </html>
