--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <title>入口</title>
-    <meta http-equiv="refresh" content="0; url=birthday.html">
-</head>
-<body>
-    <p>正在进入页面……</p>
-</body>
-</html>
+<!doctype html>
+<meta charset="utf-8">
+<title>跳转中</title>
+<meta http-equiv="refresh" content="0; url=birthday.html">
